reverted to java 1.8 code syntax